# FastHabr_api

./: .gitignore  .travis.yml  Docker-compose.yml  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/models/: database.py
app/routers/: posts.py  users.py
app/tests/: conftest.py  test_health_check.py  test_posts.py  test_users.py
app/utils/: dependecies.py  posts.py  users.py
migrations/: env.py
models/: users.py
src/: main.py
src/models/: database.py  users.py
src/routers/: users.py
src/schemas/: posts.py
src/utils/: users.py
