[tool.poetry]
name = "fasthabr_api"
version = "0.1.0"
description = "API своего собственного мини Хабра без кармы и рейтингов, зато с блэкджеком и с тестами, аутентификацией, миграциями и асинхронной работой с БД"
authors = ["Speccy-Rom <speccy.rom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
SQLAlchemy = "1.4.22"
alembic = "1.6.5"
databases = "^0.5.0"
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
uvicorn = "0.15.0"
email-validator = "^1.1.3"
SQLAlchemy-Utils = "^0.37.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
